--- a/public/views/operario/reportes.html
+++ b/public/views/operario/reportes.html
@@ -1,38 +1,65 @@
-<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script   src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/data.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+  </head>
+  <body >
+    <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
-<table id="datatable">
-    <thead>
-        <tr>
-            <th></th>
-            <th>Jane</th>
-            <th>John</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th>Apples</th>
-            <td>3</td>
-            <td>4</td>
-        </tr>
-        <tr>
-            <th>Pears</th>
-            <td>2</td>
-            <td>0</td>
-        </tr>
-        <tr>
-            <th>Plums</th>
-            <td>5</td>
-            <td>11</td>
-        </tr>
-        <tr>
-            <th>Bananas</th>
-            <td>1</td>
-            <td>1</td>
-        </tr>
-        <tr>
-            <th>Oranges</th>
-            <td>2</td>
-            <td>4</td>
-        </tr>
-    </tbody>
-</table>
+    <table id="datatable">
+        <thead>
+            <tr>
+                <th></th>
+                <th>interlab</th>
+                <th>Grupo Kenedy</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>Enero</th>
+                <td>3</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <th>Febrero</th>
+                <td>2</td>
+                <td>0</td>
+            </tr>
+        </tbody>
+    </table>
+    <script>
+
+        $(function () {
+            $('#container').highcharts({
+                data: {
+                    table: 'datatable'
+                },
+                chart: {
+                    type: 'column'
+                },
+                title: {
+                    text: 'Data extracted from a HTML table in the page'
+                },
+                yAxis: {
+                    allowDecimals: false,
+                    title: {
+                        text: 'Units'
+                    }
+                },
+                tooltip: {
+                    formatter: function () {
+                        return '<b>' + this.series.name + '</b><br/>' +
+                            this.point.y + ' ' + this.point.name.toLowerCase();
+                    }
+                }
+            });
+        });
+
+    </script>
+  </body>
+</html>
