--- a/public/views/paciente/examenes.html
+++ b/public/views/paciente/examenes.html
@@ -18,7 +18,23 @@ table tr:nth-child(even) {
 }
 </style>
 <div ng-controller="TNTIndexController as indexController">
-      <div id="tntGridServices" ui-grid="gridOptions" ui-grid-selection ui-grid-exporter class=grid></div>
+      <div id="tntGridServices" ui-grid="gridOptions" ui-grid-selection ui-grid-exporter class=grid>
+          <!--<table class="table">
+            <tr>
+                <th>Fecha</th>
+                <th>Examen</th>
+                <th>Estado</th>
+                <th>Descargar</th>
+            </tr>
+            <tr ng-repeat="exam in examenes">
+                <td>{{exam.muestra}}</td>
+                <td>Celda 3</td>
+                <td>Celda 4</td>
+            </tr>
+
+          </table>-->
+          
+      </div>
     </div>
 <!-- 
 <div class="section no-pad-bot">
@@ -39,19 +55,7 @@ table tr:nth-child(even) {
         d) Link para descargar el pdf con los resultados. El cual deberá ser generado una vez que
         los resultados hayan sido ingresados (revisar la librería pdfmake ).
             <caption>Mis Ex&aacute;menes</caption>
-            <tr>
-                <th>Fecha</th>
-                <th>Examen</th>
-                <th>Estado</th>
-                <th>Descargar</th>
-            </tr>
-            <tr ng-repeat="exam in examenes">
-                <td>{{exa.fecha}}</td>
-                <td>{{exa.estado}}</td>
-                <td>Celda 3</td>
-                <td>Celda 4</td>
-            </tr>
-        </table>
+            
         </div>
     </div>
 </div>
@@ -60,4 +64,3 @@ table tr:nth-child(even) {
 =======
     </div>
 </div>-->
->>>>>>> lenin
