--- a/public/views/paciente/examenes.html
+++ b/public/views/paciente/examenes.html
@@ -1,66 +1,24 @@
 
-<style>
-h5 {
-    border-bottom: 3px solid #cc9900;
-    color: #996600;
-    font-size: 30px;
-}
-table, th , td  {
-    border: 1px solid grey;
-    border-collapse: collapse;
-    padding: 5px;
-}
-table tr:nth-child(odd) {
-    background-color: #f1f1f1;
-}
-table tr:nth-child(even) {
-    background-color: #ffffff;
-}
-</style>
-<div ng-controller="TNTIndexController as indexController">
-      <div id="tntGridServices" ui-grid="gridOptions" ui-grid-selection ui-grid-exporter class=grid>
-          <!--<table class="table">
+<div class="container">
+    <table class="table table-striped">
+        <thead>
             <tr>
-                <th>Fecha</th>
                 <th>Examen</th>
+                <th>Fecha</th>
                 <th>Estado</th>
-                <th>Descargar</th>
+                <th>Resultados</th>
             </tr>
-            <tr ng-repeat="exam in examenes">
-                <td>{{exam.muestra}}</td>
-                <td>Celda 3</td>
-                <td>Celda 4</td>
-            </tr>
+        </thead>
+        <tbody>
+            <div  ng-repeat="muestra in muestras">
+                <tr ng-repeat="examen in muestra.examenes">
+                    <td>{{examen.nombre}}</td>
+                    <td>{{muestra.fecha}}</td>
+                    <td>Estado</td>
+                    <td>Resultados</td>
+                </tr>    
+            </div>
+        </tbody>
+    </table>
+</div>
 
-          </table>-->
-          
-      </div>
-    </div>
-<!-- 
-<div class="section no-pad-bot">
-  <div class="container">
-    <div class="row center">
-      <h5 class="header col s12 light">Mis Ex&aacute;menes</h5>
-        <div>
-<<<<<<< HEAD
-        <table class="responsive-table" id="tntGridServices" ui-grid="gridOptions" ui-grid-selection ui-grid-exporter> 
-        <!-- Tabla pura en html
-=======
-        <table class="responsive-table"> <!-- Tabla pura en html
->>>>>>> lenin
-        a) Fecha de la toma de la muestra.
-        b) Exámenes a realizarse contra la muestra medica.
-        c) Estado: Recién se ha ingresado al sistema, la muestra está en proceso de análisis del
-        laboratorio, o los resultados están listos. ( Sea creativo para mostrar esta parte)
-        d) Link para descargar el pdf con los resultados. El cual deberá ser generado una vez que
-        los resultados hayan sido ingresados (revisar la librería pdfmake ).
-            <caption>Mis Ex&aacute;menes</caption>
-            
-        </div>
-    </div>
-</div>
-<<<<<<< HEAD
-</div>
-=======
-    </div>
-</div>-->
