--- a/views/paciente.ejs
+++ b/views/paciente.ejs
@@ -6,9 +6,9 @@
         
         <script type="text/javascript" src="scripts/patient/appAngular.js"></script>
         <!--<script src="https://rawgit.com/dwmkerr/angular-modal-service/master/dst/angular-modal-service.js"></script>-->
-        <script src="http://ui-grid.info/release/ui-grid.js"></script>
+        <script src="https://cdn.rawgit.com/angular-ui/bower-ui-grid/master/ui-grid.min.js"></script>
         
-        <link rel="stylesheet" href="http://ui-grid.info/release/ui-grid.css" type="text/css">
+        <link rel="stylesheet" href="https://cdn.rawgit.com/angular-ui/bower-ui-grid/master/ui-grid.min.css" type="text/css">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
