--- a/public/views/paciente/datos.html
+++ b/public/views/paciente/datos.html
@@ -3,28 +3,29 @@
     <div class="row">
         <form id="formularioActualizarPaciente" class="col s12">
             <h4 class="col s12 center">Actualice sus datos</h4><hr>
-            <div class="input-field col s6">
+            <div class="input-field col s12">
               <i class="material-icons prefix">account_circle</i>
-              <input id="icon_prefix" type="text" name="nombre" placeholder="Ingrese sus nombres" ng-model="datos.nombre" value="{{datos.nombre}}" require/>
+              <input id="icon_prefix" type="text" name="nombre" placeholder="Ingrese sus nombres" ng-model="datos.nombre" require/>
               <label class="active" for="icon_prefix">Nombres</label>
             </div>
-            <div class="input-field col s6">
-              <input id="icon_prefix" type="text" name="nombre" placeholder="Ingrese sus apellidos" ng-model="datos.apellido" value="{{datos.apellido}}" require/>
+            <div class="input-field col s12">
+              <i class="material-icons prefix">account_circle</i>
+              <input id="icon_prefix" type="text" name="nombre" placeholder="Ingrese sus apellidos" ng-model="datos.apellido" require/>
               <label class="active" for="icon_prefix">Apellidos</label>
             </div>
             <div class="input-field col s12">
               <i class="material-icons prefix">perm_identity</i>
-              <input id="icon_prefix" type="text" name="cedula" placeholder="Ingrese su c&eacute;dula" ng-model="datos.cedula" value="{{datos.nombre}}" require/>
+              <input id="icon_prefix" type="text" name="cedula" placeholder="Ingrese su c&eacute;dula" ng-model="datos.cedula" require/>
               <label class="active" for="icon_prefix">C&eacute;dula</label>
             </div>
             <div class="input-field col s12">
               <i class="material-icons prefix">room</i>
-              <input id="icon_prefix" type="text" name="direccion" placeholder="Ingrese su direcci&oacute;" ng-model="datos.direccion" value="{{datos.nombre}}" require/>
+              <input id="icon_prefix" type="text" name="direccion" placeholder="Ingrese su direcci&oacute;" ng-model="datos.direccion" require/>
               <label class="active" for="icon_prefix">Direcci&oacute;n</label>
             </div>
             <div class="input-field col s12">
               <i class="material-icons prefix">phone</i>
-              <input id="icon_prefix" type="text" name="telefono" placeholder="Ingrese su tel&eacute;fono"  ng-model="datos.telefono" value="{{datos.nombre}}" require/>
+              <input id="icon_prefix" type="text" name="telefono" placeholder="Ingrese su tel&eacute;fono"  ng-model="datos.telefono" require/>
               <label class="active" for="icon_prefix">Tel&eacute;fono</label>
             </div>
             <button type="button" class="btn col s4 left btn-primary" ng-click="actualizar()">Enviar</button>
